package cbs.proto;

option java_package = "org.stingray.cbs.proto";

message Header {
  optional uint64 num_rows = 1;
  optional uint64 block_size = 2;
  optional uint64 compressed_block_size=3;
  optional uint64 bitmap_size = 4;
  optional uint64 compressed_bitmap_size = 5;
};